objects/maps__TPUnitAssignment__c.object
<CustomObject>
    <fields>
        <fullName>maps__AlignmentId__c</fullName>
        <description>Text Id that can point to a Data Set or Alignment</description>
        <label>AlignmentId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>maps__TPArea__c</referenceTo>
        <relationshipLabel>Territory Planning Unit Assignments</relationshipLabel>
        <relationshipName>UnitAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ContainerId__c</fullName>
        <description>Text Id that points to an external container</description>
        <label>ContainerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DataSourceId__c</fullName>
        <description>Text Id that can point to any data source</description>
        <label>DataSourceId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__Metadata__c</fullName>
        <label>Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__UnitId__c</fullName>
        <description>Text Id that can point to any record</description>
        <label>UnitId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory Planning Unit Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Planning Unit Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>